# OOP_first_coursework

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
ML_Library/: __init__.py  cnn_module.py  fcnn_module.py  layers_module.py  linear_module.py  losses_module.py  train_module.py
examplex/: cnn_example.ipynb  fcnn_example.ipynb  linear_models_examples.ipynb
